TVA merge, datweaks

--- a/i18n/ar/invoices.json
+++ b/i18n/ar/invoices.json
@@ -18,6 +18,8 @@
   "btns": {
     "view": "عرض",
     "edit": "تعديل",
-    "markAsPaid": "وضع علامة كمدفوع"
+    "markAsPaid": "وضع علامة كمدفوع",
+    "duplicate": "تكرار",
+    "delete": "حذف"
   }
 } 
